spaced elements equally across canvas

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
           <!-- <button class="setup-button" onclick="app.gotoScreensaverPage()">CONFIGURE DEVICE</button> -->
         </div>
         <div id="setupDevicePrelooader" class="setup-message">
-        <div class="setup-preloaders">
-          <img id="drink" class="setup-preloader" src="assets/image/drink.png">
-          <img id="chicken" class="setup-preloader" src="assets/image/chicken.png">
-          <img id="pizza" class="setup-preloader" src="assets/image/pizza.png">
+          <div class="setup-preloaders">
+            <img id="drink" class="setup-preloader" src="assets/image/drink.png">
+            <img id="chicken" class="setup-preloader" src="assets/image/chicken.png">
+            <img id="pizza" class="setup-preloader" src="assets/image/pizza.png">
+          </div>
+          <p class="setup-message">Configuring your device. Please wait..</p>
         </div>
-        <p class="setup-message">Configuring your device. Please wait..</p>
-      </div>
       </div>
     </div>
 
@@ -90,20 +90,161 @@
         <!-- LIST OF CATEGORY CARDS -->
         <div id="cards-category" class="card-group"></div>
 
+        <div id="placeholder-cards-category" class="card-group">
+          <!-- PLACEHOLDER CARD 1 -->
+          <div id="card-bundle" class="card">
+            <div class="card-content">
+              <div class="ph-item">
+                <div class="ph-col-12">
+                  <div class="ph-picture"></div>
+                  <div class="ph-row">
+                    <div class="ph-col-12 empty"></div>
+                    <div class="ph-col-8 big"></div>
+                    <div class="ph-col-2 empty big"></div>
+                    <div class="ph-col-2 big"></div>
+                    <div class="ph-col-4"></div>
+                    <div class="ph-col-2 empty"></div>
+                    <div class="ph-col-6"></div>
+                    <div class="ph-col-12"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-background">
+            </div>
+          </div>
+
+          <!-- PLACEHOLDER CARD 2 -->
+          <div id="card-bundle" class="card">
+            <div class="card-content">
+              <div class="ph-item">
+                <div class="ph-col-12">
+                  <div class="ph-picture"></div>
+                  <div class="ph-row">
+                    <div class="ph-col-12 empty"></div>
+                    <div class="ph-col-8 big"></div>
+                    <div class="ph-col-2 empty big"></div>
+                    <div class="ph-col-2 big"></div>
+                    <div class="ph-col-4"></div>
+                    <div class="ph-col-2 empty"></div>
+                    <div class="ph-col-6"></div>
+                    <div class="ph-col-12"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-background">
+            </div>
+          </div>
+
+          <!-- PLACEHOLDER CARD 3 -->
+          <div id="card-bundle" class="card">
+            <div class="card-content">
+              <div class="ph-item">
+                <div class="ph-col-12">
+                  <div class="ph-picture"></div>
+                  <div class="ph-row">
+                    <div class="ph-col-12 empty"></div>
+                    <div class="ph-col-8 big"></div>
+                    <div class="ph-col-2 empty big"></div>
+                    <div class="ph-col-2 big"></div>
+                    <div class="ph-col-4"></div>
+                    <div class="ph-col-2 empty"></div>
+                    <div class="ph-col-6"></div>
+                    <div class="ph-col-12"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-background">
+            </div>
+          </div>
+
+          <!--PLACEHOLDER CARD 4 -->
+          <div id="card-bundle" class="card">
+            <div class="card-content">
+              <div class="ph-item">
+                <div class="ph-col-12">
+                  <div class="ph-picture"></div>
+                  <div class="ph-row">
+                    <div class="ph-col-12 empty"></div>
+                    <div class="ph-col-8 big"></div>
+                    <div class="ph-col-2 empty big"></div>
+                    <div class="ph-col-2 big"></div>
+                    <div class="ph-col-4"></div>
+                    <div class="ph-col-2 empty"></div>
+                    <div class="ph-col-6"></div>
+                    <div class="ph-col-12"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-background">
+            </div>
+          </div>
+
+          <!-- PLACEHOLDER CARD 5 -->
+          <div id="card-bundle" class="card">
+            <div class="card-content">
+              <div class="ph-item">
+                <div class="ph-col-12">
+                  <div class="ph-picture"></div>
+                  <div class="ph-row">
+                    <div class="ph-col-12 empty"></div>
+                    <div class="ph-col-8 big"></div>
+                    <div class="ph-col-2 empty big"></div>
+                    <div class="ph-col-2 big"></div>
+                    <div class="ph-col-4"></div>
+                    <div class="ph-col-2 empty"></div>
+                    <div class="ph-col-6"></div>
+                    <div class="ph-col-12"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-background">
+            </div>
+          </div>
+
+          <!-- PLACEHOLDER CARD 6 -->
+          <div id="card-bundle" class="card">
+            <div class="card-content">
+              <div class="ph-item">
+                <div class="ph-col-12">
+                  <div class="ph-picture"></div>
+                  <div class="ph-row">
+                    <div class="ph-col-12 empty"></div>
+                    <div class="ph-col-8 big"></div>
+                    <div class="ph-col-2 empty big"></div>
+                    <div class="ph-col-2 big"></div>
+                    <div class="ph-col-4"></div>
+                    <div class="ph-col-2 empty"></div>
+                    <div class="ph-col-6"></div>
+                    <div class="ph-col-12"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-background">
+            </div>
+          </div>
+        </div>
+
         <!-- BASKET -->
+        <div>
         <div id="basket" class="basket">
           <div id="basket-table" class="basket-table animate-basket-background">
             <table>
               <thead>
-              <tr>
-                <th>BUNDLE NAME</th>
-                <th>UNIT PRICE</th>
-                <th>QUANTITY</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody id="basketTable">
-            </tbody>
+                <tr>
+                  <th>BUNDLE NAME</th>
+                  <th>UNIT PRICE</th>
+                  <th>QUANTITY</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody id="basketTable">
+              </tbody>
             </table>
           </div>
           <div class="basket-total">
@@ -130,15 +271,16 @@
         </div>
         <div class="logo-grid">
           <img class="footer-logo" src="assets/image/335-restaurant.png">
-          <img class="footer-logo" src="assets/image/411-restaurant.jpg">
-          <img class="footer-logo" src="assets/image/diet-munchers.jpg">
+          <img class="footer-logo" src="assets/image/411-restaurant.png">
+          <img class="footer-logo" src="assets/image/diet-munchers.png">
           <img class="footer-logo" src="assets/image/grindgrillcafe.png">
           <img class="footer-logo" src="assets/image/kmac.png">
           <img class="footer-logo" src="assets/image/papas-grill.png">
-          <img class="footer-logo" src="assets/image/pattaya.jpg">
+          <img class="footer-logo" src="assets/image/mailik-juice.png">
           <img class="footer-logo" src="assets/image/simply-green.jpg">
           <img class="footer-logo" src="assets/image/the-place.png">
         </div>
+      </div>
       </div>
     </div>
 
@@ -163,8 +305,8 @@
         </div>
 
         <div id="placeholder-cards-bundle" class="card-group">
-          <!-- CARD 1 -->
-          <div id="card-bundle-1" class="card" onclick="app.showModalBundleDetail('1',6)">
+          <!-- PLACEHOLDER CARD 1 -->
+          <div id="card-bundle" class="card">
             <div class="card-content">
               <div class="ph-item">
                 <div class="ph-col-12">
@@ -186,8 +328,8 @@
             </div>
           </div>
 
-          <!-- CARD 1 -->
-          <div id="card-bundle-1" class="card" onclick="app.showModalBundleDetail('1',6)">
+          <!-- PLACEHOLDER CARD 2 -->
+          <div id="card-bundle" class="card">
             <div class="card-content">
               <div class="ph-item">
                 <div class="ph-col-12">
@@ -209,8 +351,8 @@
             </div>
           </div>
 
-          <!-- CARD 1 -->
-          <div id="card-bundle-1" class="card" onclick="app.showModalBundleDetail('1',6)">
+          <!-- PLACEHOLDER CARD 3 -->
+          <div id="card-bundle" class="card">
             <div class="card-content">
               <div class="ph-item">
                 <div class="ph-col-12">
@@ -232,8 +374,8 @@
             </div>
           </div>
 
-          <!-- CARD 1 -->
-          <div id="card-bundle-1" class="card" onclick="app.showModalBundleDetail('1',6)">
+          <!--PLACEHOLDER CARD 4 -->
+          <div id="card-bundle" class="card">
             <div class="card-content">
               <div class="ph-item">
                 <div class="ph-col-12">
@@ -255,8 +397,8 @@
             </div>
           </div>
 
-          <!-- CARD 1 -->
-          <div id="card-bundle-1" class="card" onclick="app.showModalBundleDetail('1',6)">
+          <!-- PLACEHOLDER CARD 5 -->
+          <div id="card-bundle" class="card">
             <div class="card-content">
               <div class="ph-item">
                 <div class="ph-col-12">
@@ -278,8 +420,8 @@
             </div>
           </div>
 
-          <!-- CARD 1 -->
-          <div id="card-bundle-1" class="card" onclick="app.showModalBundleDetail('1',6)">
+          <!-- PLACEHOLDER CARD 6 -->
+          <div id="card-bundle" class="card">
             <div class="card-content">
               <div class="ph-item">
                 <div class="ph-col-12">
@@ -303,19 +445,20 @@
         </div>
 
         <!-- BASKET -->
+        <div>
         <div id="basket" class="basket">
           <div id="bundle-basket-table" class="basket-table animate-basket-background">
             <table>
               <thead>
-              <tr>
-                <th>BUNDLE NAME</th>
-                <th>UNIT PRICE</th>
-                <th>QUANTITY</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody id="bundleBasketTable">
-            </tbody>
+                <tr>
+                  <th>BUNDLE NAME</th>
+                  <th>UNIT PRICE</th>
+                  <th>QUANTITY</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody id="bundleBasketTable">
+              </tbody>
             </table>
           </div>
           <div class="basket-total">
@@ -341,13 +484,25 @@
             </button>
           </div>
         </div>
+        <div class="logo-grid">
+          <img class="footer-logo" src="assets/image/335-restaurant.png">
+          <img class="footer-logo" src="assets/image/411-restaurant.png">
+          <img class="footer-logo" src="assets/image/diet-munchers.png">
+          <img class="footer-logo" src="assets/image/grindgrillcafe.png">
+          <img class="footer-logo" src="assets/image/kmac.png">
+          <img class="footer-logo" src="assets/image/papas-grill.png">
+          <img class="footer-logo" src="assets/image/mailik-juice.png">
+          <img class="footer-logo" src="assets/image/simply-green.jpg">
+          <img class="footer-logo" src="assets/image/the-place.png">
+        </div>
+      </div>
       </div>
     </div>
 
-<!-- LAST VIEW FOR WHEN VIEWS IS LOADING -->
-<div class="view" data-statusbar="white" >
-  <div class="setup-main-content">
-</div>
+    <!-- LAST VIEW FOR WHEN VIEWS IS LOADING -->
+    <div class="view" data-statusbar="white" >
+      <div class="setup-main-content">
+      </div>
     </div>
 
     <!-- MODAL - BUNDLE DETAIL -->
