modified transaction inputs

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div>
         <div id="basket" class="basket">
           <div id="basket-table" class="basket-table animate-basket-background">
-            <table>
+            <table class="">
               <thead>
                 <tr>
                   <th>BUNDLE NAME</th>
