--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="assets/css/swiper.min.css"/>
   <link rel="stylesheet" href="assets/css/alertify.min.css"/>
   <link rel="stylesheet" href="assets/css/placeholder-loading.css" type="text/css"/>
+  <link rel="stylesheet" href="assets/css/keyboard.min.css">
 
   <!--  -->
 
@@ -528,7 +529,9 @@
 <!-- CUSTOM PLUGINS -->
 <script src="assets/js/swiper.min.js"></script>
 <script src="assets/js/alertify.min.js"></script>
-<script src="assets/js/toastr.js"></script>
+<!-- <script src="assets/js/toastr.js"></script> -->
+<script src="assets/js/jquery.keyboard.js"></script>
+<script src="assets/js/modernizr-custom.js"></script>
 <!--  -->
 
 
