made comments pretty

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
               </div>
             </div>
 
-            <button class="green-button" onclick="app.showModalCheckout()">
+            <button id="checkoutButton" class="green-button" onclick="app.showModalCheckout()">
               PROCEED TO CHECKOUT
             </button>
           </div>
