--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       <div class="main-content">
         <div class="main-header">
           <div class="main-header-nav">
-            <div onclick="app.gotoCategoryPage()">
+            <div onclick="app.goBackToCategory()">
               <img src="assets/image/back.png">
             </div>
             <div class="location-details">
