added function specific keyboard

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <p><span class="currency">NGN</span><span id="grandTotal">00</span><span class="currency">.00</span></p>
               </div>
             </div>
-            <button class="green-button" onclick="app.showModalCheckout()">
+            <button id="checkoutCategoryButton" class="green-button" onclick="app.showModalCheckout()">
               PROCEED TO CHECKOUT
             </button>
           </div>
@@ -480,7 +480,7 @@
               </div>
             </div>
 
-            <button id="checkoutButton" class="green-button" onclick="app.showModalCheckout()">
+            <button id="checkoutBundleButton" class="green-button" onclick="app.showModalCheckout()">
               PROCEED TO CHECKOUT
             </button>
           </div>
