fixed grand total error on bundle delete

--- a/index.html
+++ b/index.html
@@ -252,17 +252,17 @@
             <div>
               <div class="basket-total-row">
                 <span>Total Bundle</span>
-                <p><span class="currency">NGN</span><span id="totalBasketBundle">00</span><span class="currency">.00</span></p>
+                <p><span class="currency">NGN</span><span id="totalBundleCategory">00</span><span class="currency">.00</span></p>
               </div>
               <!-- <div class="basket-total-row"></div> -->
               <div class="basket-total-row">
                 <span>Delivery</span>
-                <p><span class="currency">NGN</span><span id="deliveryCost">00</span><span class="currency">.00</span></p>
+                <p><span class="currency">NGN</span><span id="deliveryCostCategory">00</span><span class="currency">.00</span></p>
               </div>
               <hr>
               <div class="basket-total-row basket-total-row-total">
                 <span>Total</span>
-                <p><span class="currency">NGN</span><span id="grandTotal">00</span><span class="currency">.00</span></p>
+                <p><span class="currency">NGN</span><span id="grandTotalCategory">00</span><span class="currency">.00</span></p>
               </div>
             </div>
             <button id="checkoutCategoryButton" class="green-button" onclick="app.showModalCheckout()">
