--- a/index.html
+++ b/index.html
@@ -207,7 +207,54 @@
             </div>
           </div>
 
-          <!-- PLACEHOLDER CARD 6 -->
+
+          <!--PLACEHOLDER CARD 6 -->
+          <div id="card-bundle" class="card">
+            <div class="card-content">
+              <div class="ph-item">
+                <div class="ph-col-12">
+                  <div class="ph-picture"></div>
+                  <div class="ph-row">
+                    <div class="ph-col-12 empty"></div>
+                    <div class="ph-col-8 big"></div>
+                    <div class="ph-col-2 empty big"></div>
+                    <div class="ph-col-2 big"></div>
+                    <div class="ph-col-4"></div>
+                    <div class="ph-col-2 empty"></div>
+                    <div class="ph-col-6"></div>
+                    <div class="ph-col-12"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-background">
+            </div>
+          </div>
+
+          <!--PLACEHOLDER CARD 7 -->
+          <div id="card-bundle" class="card">
+            <div class="card-content">
+              <div class="ph-item">
+                <div class="ph-col-12">
+                  <div class="ph-picture"></div>
+                  <div class="ph-row">
+                    <div class="ph-col-12 empty"></div>
+                    <div class="ph-col-8 big"></div>
+                    <div class="ph-col-2 empty big"></div>
+                    <div class="ph-col-2 big"></div>
+                    <div class="ph-col-4"></div>
+                    <div class="ph-col-2 empty"></div>
+                    <div class="ph-col-6"></div>
+                    <div class="ph-col-12"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-background">
+            </div>
+          </div>
+
+          <!--PLACEHOLDER CARD 8 -->
           <div id="card-bundle" class="card">
             <div class="card-content">
               <div class="ph-item">
@@ -422,6 +469,53 @@
           </div>
 
           <!-- PLACEHOLDER CARD 6 -->
+          <div id="card-bundle" class="card">
+            <div class="card-content">
+              <div class="ph-item">
+                <div class="ph-col-12">
+                  <div class="ph-picture"></div>
+                  <div class="ph-row">
+                    <div class="ph-col-12 empty"></div>
+                    <div class="ph-col-8 big"></div>
+                    <div class="ph-col-2 empty big"></div>
+                    <div class="ph-col-2 big"></div>
+                    <div class="ph-col-4"></div>
+                    <div class="ph-col-2 empty"></div>
+                    <div class="ph-col-6"></div>
+                    <div class="ph-col-12"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-background">
+            </div>
+          </div>
+
+
+          <!-- PLACEHOLDER CARD 7 -->
+          <div id="card-bundle" class="card">
+            <div class="card-content">
+              <div class="ph-item">
+                <div class="ph-col-12">
+                  <div class="ph-picture"></div>
+                  <div class="ph-row">
+                    <div class="ph-col-12 empty"></div>
+                    <div class="ph-col-8 big"></div>
+                    <div class="ph-col-2 empty big"></div>
+                    <div class="ph-col-2 big"></div>
+                    <div class="ph-col-4"></div>
+                    <div class="ph-col-2 empty"></div>
+                    <div class="ph-col-6"></div>
+                    <div class="ph-col-12"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-background">
+            </div>
+          </div>
+
+          <!-- PLACEHOLDER CARD 8 -->
           <div id="card-bundle" class="card">
             <div class="card-content">
               <div class="ph-item">
