fixed decrement error

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               <thead>
                 <tr>
                   <th>BUNDLE NAME</th>
-                  <th>UNIT PRICE</th>
+                  <th>PRICE</th>
                   <th>QUANTITY</th>
                   <th></th>
                 </tr>
